--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ overflow-x: hidden; */
  transform: translate(-50% ,-50%);
  border-radius: 10px;
  /* transform: translate(-100%,-100%); */
- 
+
  /* transform: translateY(-50%); */
  /* overflow: hidden; */
  /* opacity: 1; */
@@ -82,6 +82,7 @@ img{
     display: flex;
     flex-wrap: wrap;
     /* overflow-y: scroll; */
+    padding-top: 14px;
 }
 
 .beforemain{
