--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ overflow-x: hidden; */
     width: 200px;
     height: 200px;
     margin-right: 10px;
+    /* position: absolute; */
+    /* position: fixed; */
+    z-index: 99999;
 }
 img{
     width: 100%;
@@ -56,7 +59,7 @@ img{
     background-color: green;
 }
 .btn{
-    max-width: 300px;
+    max-width: 320px;
     max-height: auto;
     padding:10px;
     cursor: pointer;
