--- a/button.css
+++ b/button.css
@@ -1,13 +1,13 @@
 .fork,.self{
     position: absolute;
-    top: 225px;
+    /* top: 225px; */
     /* z-index: 10000; */
     /* left: 50%; */
     transform: translate(-50%);
 
     padding: 2px 5px 0 5px;
      border: 2px solid white;
-     margin: 3px;
+     /* margin-right: 50px; */
      border-radius: 5px;
      cursor: pointer;
      max-width: 200px;
@@ -20,17 +20,21 @@
     border-color: black;
 }
 .self{
-    left: 100px;
+    /* left: 100px */
+    left: 50%;
+    transform: translate(-50%);
     font-size: 1.3rem;
 }
 .fork{
-    right: 50px ;
+    /* right: 50px ; */
     font-size: 1.3rem;
+    right: 0;
 }
 .all{
-    left: 50%;
+    /* left: 50%; */
     color: black;
-    transform: translate(-50%);
+    /* transform: translate(-50%); */
+    left: 40px;
 }
 .toggle{
     background-color: black;
@@ -42,7 +46,7 @@
     width: 30px;
     height: 20px;
     right: -35px;
-    bottom: 0;
+    /* bottom: 0; */
     background:transparent;
     /* color: white; */
     color: white;
