--- a/style.css
+++ b/style.css
@@ -12,9 +12,11 @@ background: -webkit-linear-gradient(to right, #78ffd6, #a8ff78);  /* Chrome 10-2
 background: linear-gradient(to right, #78ffd6, #a8ff78); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 /* overflow-y: auto;
 overflow-x: hidden; */
+position: relative;
 }
 .container{
     max-width: 800px;
+    min-width: 400px;
     max-height: 100vh;
     min-height: 400px;
  background-color: red;
@@ -31,6 +33,7 @@ overflow-x: hidden; */
  /* opacity: 1; */
  margin: 10px;
  overflow-y: auto;
+ overflow-x: hidden;
 }
 .gate{
     transform: translate(100000%);
@@ -40,12 +43,15 @@ overflow-x: hidden; */
     padding: 0 0 15px 0;
 }
 .image{
-    width: 200px;
-    height: 200px;
+    min-width: 150px;
+    max-width: 200px;
+    height: auto;
+    max-height: 300px;
     margin-right: 10px;
     /* position: absolute; */
     /* position: fixed; */
     z-index: 99999;
+    overflow: hidden;
 }
 img{
     width: 100%;
@@ -59,7 +65,7 @@ img{
     background-color: green;
 }
 .btn{
-    max-width: 320px;
+    max-width: 100%;
     max-height: auto;
     padding:10px;
     cursor: pointer;
@@ -86,6 +92,7 @@ img{
     flex-wrap: wrap;
     /* overflow-y: scroll; */
     padding-top: 14px;
+    position: relative;
 }
 
 .beforemain{
@@ -157,4 +164,21 @@ span{
 }
 .names{
     color: rgb(39, 55, 202);
+}
+.button_div{
+    /* height:; */
+    /* position: absolute; */
+    background:transparent;
+    /* z-index: 0; */
+    width: 100%;
+    height: 30px;
+    overflow: hidden;
+    display: flex;
+    /* justify-content:space-between; */
+    align-items: center;
+    position: relative;
+
+}
+.email>a{
+    text-decoration: none;
 }
